<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/other_rootView"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@android:color/white"
    android:clickable="true"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d3"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d3"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wiki_daily"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/h4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/wiki_url"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/h5"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/wiki_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn"/>

    </LinearLayout>

    <TextView
        android:id="@+id/gank_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/d4"
        android:text="@string/activity_gank_daily"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/h4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d3"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d3"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_js_switch"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/h4"/>

            <TextView
                android:id="@+id/js_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/js_open_description"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/h5"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/js_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_check_box"
            android:button="@null"/>
    </LinearLayout>

    <TextView
        android:id="@+id/columnSelect_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/d4"
        android:text="@string/column_select"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/h4"/>

    <LinearLayout
        android:id="@+id/headPicture_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/d4"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head_picture"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/h4"/>

        <TextView
            android:id="@+id/headPicture_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/source_ng"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/h5"/>
    </LinearLayout>

    <TextView
        android:id="@+id/about_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/d4"
        android:text="@string/about"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/h4"/>

    <TextView
        android:id="@+id/thanks_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/d4"
        android:text="@string/thanks"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/h4"/>

    <LinearLayout
        android:id="@+id/suggest_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_purple"
        android:orientation="vertical"
        android:padding="@dimen/d4"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggest"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/h4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggest_subtitle"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/h5"/>
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/search_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/d3"
        android:padding="@dimen/d3"
        android:text="🔍"
        android:textSize="24sp"
        tools:ignore="HardcodedText"/>
    <!--android:src="@drawable/selector_search_btn"-->

</LinearLayout>