<?xml version="1.0" encoding="utf-8"?>
<com.github.ksoichiro.android.observablescrollview.ObservableScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="@dimen/head_image_height"
            android:layout_marginBottom="@dimen/d5"
            android:orientation="vertical"
            android:src="@color/green_nomal"
            />


        <LinearLayout
            android:layout_margin="@dimen/d3"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginLeft="@dimen/d3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:textSize="@dimen/h4"
                    android:textColor="@color/primary_text"
                    android:text="Wikipedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="@dimen/h5"
                    android:textColor="@color/secondary_text"
                    android:text="@string/wiki_url"
                    android:singleLine="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/wiki_imageButton"
                android:background="@drawable/selector_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_margin="@dimen/d3"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginLeft="@dimen/d3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:textSize="@dimen/h4"
                    android:textColor="@color/primary_text"
                    android:text="@string/other_js_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/js_textView"
                    android:textSize="@dimen/h5"
                    android:textColor="@color/secondary_text"
                    android:text="@string/js_open_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/js_checkBox"
                android:background="@drawable/selector_check_box"
                android:button="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/columnSelect_textView"
            android:textSize="@dimen/h4"
            android:textColor="@color/primary_text"
            android:text="@string/column_select"
            android:padding="@dimen/d4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/headPicture_linearLayout"
            android:padding="@dimen/d4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:textSize="@dimen/h4"
                android:textColor="@color/primary_text"
                android:text="@string/head_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/headPicture_textView"
                android:textSize="@dimen/h5"
                android:textColor="@color/secondary_text"
                android:text="@string/source_ng"
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

                <TextView
                    android:id="@+id/about_textView"
                    android:textSize="@dimen/h4"
                    android:textColor="@color/primary_text"
                    android:text="@string/about"
                    android:padding="@dimen/d4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/thanks_textView"
                    android:textSize="@dimen/h4"
                    android:textColor="@color/primary_text"
                    android:text="@string/thanks"
                    android:padding="@dimen/d4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/suggest_linearLayout"
                android:padding="@dimen/d4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:textSize="@dimen/h4"
                    android:textColor="@color/primary_text"
                    android:text="@string/suggest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="@dimen/h5"
                    android:textColor="@color/secondary_text"
                    android:text="As you wish"
                    android:singleLine="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>


</com.github.ksoichiro.android.observablescrollview.ObservableScrollView>